<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="842dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506">

        <EditText
            android:id="@+id/inres_id"
            android:layout_width="363dp"
            android:layout_height="73dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/personalid"
            android:inputType="text"
            android:maxLength="9" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/nameandlast" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inres_nombre"
                android:layout_width="164dp"
                android:layout_height="57dp"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="10" />

            <EditText
                android:id="@+id/inres_apellido"
                android:layout_width="216dp"
                android:layout_height="59dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="text"
                android:maxLength="16" />
        </LinearLayout>

        <EditText
            android:id="@+id/adress"
            android:layout_width="361dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/adress"
            android:inputType="textPostalAddress"
            android:maxLength="20" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inres_day"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/day"
                android:inputType="date"
                android:maxLength="2" />

            <EditText
                android:id="@+id/inres_month"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/month"
                android:inputType="date"
                android:maxLength="2" />

            <EditText
                android:id="@+id/inres_year"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/year"
                android:inputType="date"
                android:maxLength="4" />

        </LinearLayout>

        <EditText
            android:id="@+id/inres_phonenum"
            android:layout_width="362dp"
            android:layout_height="57dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/phonenum"
            android:inputType="phone"
            android:maxLength="8" />

        <EditText
            android:id="@+id/inres_email"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="20" />

        <EditText
            android:id="@+id/inres_password"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16" />

        <EditText
            android:id="@+id/inres_confirmpass"
            android:layout_width="351dp"
            android:layout_height="57dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/passwordc"
            android:inputType="textPassword"
            android:maxLength="16" />

        <Button
            android:id="@+id/btnres_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/specialblue"
            android:text="@string/create" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>